--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Test iOS SDK
+name: Build My Demo App
 on: 
   push:
   schedule:
@@ -25,4 +25,9 @@ jobs:
       with:
         xcode-version: ${{ matrix.xcode-version }}
     - name: Build for iOS Simulator
-      run:  set -o pipefail && xcodebuild ONLY_ACTIVE_ARCH=NO ARCHS_STANDARD="i386 x86_64" -workspace "My Demo App.xcworkspace" -scheme "My Demo App" -sdk iphonesimulator -destination "name=iPhone 12 Pro Max" -configuration Release -derivedDataPath build | xcpretty
+      run:  |
+        set -o pipefail && \
+        xcodebuild ONLY_ACTIVE_ARCH=NO ARCHS_STANDARD="i386 x86_64" \
+          -workspace "My Demo App.xcworkspace" -scheme "My Demo App" \
+          -sdk iphonesimulator -destination "${{ matrix.destination }}" \
+          -configuration Release -derivedDataPath build | xcpretty
