--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,11 @@ jobs:
         include:
         # Available XCodes taken from https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11.0-Readme.md
         - xcode-version: 12.4
-          destination: "name=iPhone 11 Pro Max"
+          device-destination: "name=iPhone 11 Pro Max"
+          simulator-destination: "Any iOS Simulator Device"
         - xcode-version: 12.3
-          destination: "name=iPhone 11 Pro Max"
+          device-destination: "name=iPhone 11 Pro Max"
+          simulator-destination: "Any iOS Simulator Device"
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
@@ -29,5 +31,5 @@ jobs:
         set -o pipefail && \
         xcodebuild ONLY_ACTIVE_ARCH=NO ARCHS_STANDARD="i386 x86_64" \
           -workspace "My Demo App.xcworkspace" -scheme "My Demo App" \
-          -sdk iphonesimulator -destination "${{ matrix.destination }}" \
+          -sdk iphonesimulator -destination "${{ matrix.simulator-destination }}" \
           -configuration Release -derivedDataPath build | xcpretty
