--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,13 @@ jobs:
     - name: Build for iOS Simulator
       run:  |
         set -o pipefail && \
-        xcodebuild ONLY_ACTIVE_ARCH=NO ARCHS_STANDARD="i386 x86_64" \
-          -workspace "My Demo App.xcworkspace" -scheme "My Demo App" \
-          -sdk iphonesimulator -destination "${{ matrix.simulator-destination }}" \
-          -configuration Release -derivedDataPath build | xcpretty
+        xcrun simctl list && \
+        xcodebuild \
+          ONLY_ACTIVE_ARCH=NO \
+          ARCHS_STANDARD="i386 x86_64" \
+          -workspace "My Demo App.xcworkspace" \
+          -scheme "My Demo App" \
+          -sdk iphonesimulator \
+          -destination "${{ matrix.simulator-destination }}" \
+          -configuration Release \
+          -derivedDataPath build | xcpretty
