--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,9 @@ jobs:
         include:
         # Available XCodes taken from https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11.0-Readme.md
         - xcode-version: 12.4
-          device-destination: "name=iPhone 11 Pro Max"
-          simulator-destination: "name=Any iOS Simulator Device"
+          destination: "name=iPhone 11 Pro Max"
         - xcode-version: 12.3
-          device-destination: "name=iPhone 11 Pro Max"
-          simulator-destination: "name=Any iOS Simulator Device"
+          destination: "name=iPhone 11 Pro Max"
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
@@ -30,12 +28,13 @@ jobs:
       run:  |
         set -o pipefail && \
         xcrun simctl list && \
+        xcodebuild -showsdks && \
         xcodebuild \
           ONLY_ACTIVE_ARCH=NO \
           ARCHS_STANDARD="i386 x86_64" \
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
           -sdk iphonesimulator \
-          -destination "${{ matrix.simulator-destination }}" \
+          -destination "${{ matrix.destination }}" \
           -configuration Release \
           -derivedDataPath build | xcpretty
