--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,8 @@ jobs:
         # Available XCodes taken from https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11.0-Readme.md
         - xcode-version: 12.4
           destination: "name=iPhone 11 Pro Max"
-          sdk: "iphonesimulator14.4"
         - xcode-version: 12.3
           destination: "name=iPhone 11 Pro Max"
-          sdk: "iphonesimulator14.3"
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
@@ -29,14 +27,12 @@ jobs:
     - name: Build for iOS Simulator
       run:  |
         set -o pipefail && \
-        xcrun simctl list && \
-        xcodebuild -showsdks && \
         xcodebuild \
           ONLY_ACTIVE_ARCH=NO \
           ARCHS_STANDARD="i386 x86_64" \
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
-          -sdk "${{ matrix.sdk }}" \
+          -sdk iphonesimulator \
           -destination "${{ matrix.destination }}" \
           -configuration Release \
           -derivedDataPath build | xcpretty
