--- a/My Demo App.xcodeproj/xcshareddata/xcschemes/My Demo App.xcscheme
+++ b/My Demo App.xcodeproj/xcshareddata/xcschemes/My Demo App.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A2C826A72706266600616582"
+               BuildableName = "My Demo AppUITests.xctest"
+               BlueprintName = "My Demo AppUITests"
+               ReferencedContainer = "container:My Demo App.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
