--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,17 @@ jobs:
         xcodebuild \
           ONLY_ACTIVE_ARCH=NO \
           ARCHS_STANDARD="i386 x86_64" \
+          build \
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
           -sdk iphonesimulator \
           -destination "${{ matrix.destination }}" \
           -configuration Release \
           -derivedDataPath build | xcpretty
+    - name: Run Tests
+      run: |
+        xcodebuild \
+          test \
+          -workspace "My Demo App.xcworkspace" \
+          -scheme "My Demo App" \
+          -destination "${{ matrix.destination }}"
