--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,18 @@ jobs:
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
           -destination "${{ matrix.destination }}"
+    - uses: yukiarrr/ios-build-action@v1.4.0
+      with:
+        workspace-path: My Demo App.xcworkspace
+        project-path: My Demo App.xcodeproj
+        scheme: My Demo App
+        code-signing-identity: iOS Development
+        export-method: development
+        outout: build/demo-app.ipa
+        p12-base64: ${{ secrets.P12_BASE64 }}
+        certificate-password: ${{ secrets.P12_PASSWORD }}
+        mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
+        team-id: ${{ secrets.TEAM_ID }}
+    - name: Print Build Folder
+      run: ls -lsrt build/
+        
