--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Build My Demo App
+name: Run Tests for My Demo App
 on: 
   push:
   schedule:
@@ -24,16 +24,25 @@ jobs:
       uses: maxim-lobanov/setup-xcode@v1.2.1
       with:
         xcode-version: ${{ matrix.xcode-version }}
-    - name: Build for iOS Simulator
-      run:  |
-        set -o pipefail && \
+    - name: Run Tests
+      run: |
         xcodebuild \
-          ONLY_ACTIVE_ARCH=NO \
-          ARCHS_STANDARD="i386 x86_64" \
-          build \
+          test \
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
-          -sdk iphonesimulator \
-          -destination "${{ matrix.destination }}" \
-          -configuration Release \
-          -derivedDataPath build | xcpretty
+          -destination "${{ matrix.destination }} | xcpretty"
+    - uses: yukiarrr/ios-build-action@v1.4.0
+      with:
+        workspace-path: My Demo App.xcworkspace
+        project-path: My Demo App.xcodeproj
+        scheme: My Demo App
+        code-signing-identity: iOS Development
+        export-method: development
+        outout-path: build/demo-app.ipa
+        p12-base64: ${{ secrets.P12_BASE64 }}
+        certificate-password: ${{ secrets.P12_PASSWORD }}
+        mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
+        team-id: ${{ secrets.TEAM_ID }}
+    - name: Print Build Folder
+      run: ls -lsrt build/
+        
