--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
           test \
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
-          -destination "${{ matrix.destination }} | xcpretty"
+          -destination "${{ matrix.destination }}" | xcpretty
     - uses: yukiarrr/ios-build-action@v1.4.0
       with:
         workspace-path: My Demo App.xcworkspace
