--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,12 +7,6 @@ on:
 jobs:
   run-tests:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        include:
-        # Available XCodes taken from https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11.0-Readme.md
-        - xcode-version: 12.4
-          destination: "name=iPhone 11 Pro Max"
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
@@ -21,21 +15,50 @@ jobs:
     - name: Select XCode
       uses: maxim-lobanov/setup-xcode@v1.2.1
       with:
-        xcode-version: ${{ matrix.xcode-version }}
+        xcode-version: 12.4
+    - name: Set Release Version
+      run: |
+        echo ${GITHUB_REF##*/} > RELEASE_TAG
+        xcrun agvtool new-marketing-version $(cat RELEASE_TAG)
+      if: startsWith(github.ref, 'refs/tags/')
+    - name: Build for iOS Simulator
+      run:  |
+        set -o pipefail && \
+        xcodebuild \
+          ONLY_ACTIVE_ARCH=NO \
+          ARCHS_STANDARD="i386 x86_64" \
+          build \
+          -workspace "My Demo App.xcworkspace" \
+          -scheme "My Demo App" \
+          -sdk iphonesimulator \
+          -destination "name=iPhone 11 Pro Max" \
+          -configuration Release \
+          -derivedDataPath build | xcpretty
+    - name: Zip iOS Simulator Build
+      run: |
+         mkdir Payload
+         cp -R build/Build/Products/Release-iphonesimulator/My\ Demo\ App.app/ Payload/.
+         zip -9 -r SauceLabs-Demo-App.Simulator.zip Payload
+         rm -rf Payload
     - uses: yukiarrr/ios-build-action@v1.4.0
       with:
-        update-targets: |
-          My Demo App
         workspace-path: My Demo App.xcworkspace
         project-path: My Demo App.xcodeproj
         scheme: My Demo App
         code-signing-identity: iPhone Developer
         export-method: development
-        output-path: build/demo-app.ipa
+        output-path: build/SauceLabs-Demo-App.ipa
         p12-base64: ${{ secrets.P12_BASE64 }}
         certificate-password: ${{ secrets.P12_PASSWORD }}
         mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
         team-id: ${{ secrets.TEAM_ID }}
-    - name: Print Build Folder
-      run: ls -lsrt build/
+    - name: Add Artifacts to Github Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          SauceLabs-Demo-App.Simulator.zip
+          SauceLabs-Demo-App.ipa
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
