--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - main
+    tags:
+      - '*.*.*'
 
 jobs:
-  run-tests:
+  create-release:
     runs-on: macos-latest
     timeout-minutes: 30
     steps:
