--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   create-release:
     runs-on: macos-latest
+    env:
+      xcode-version: 12.4
+      destination: name=iPhone 11 Pro Max
     timeout-minutes: 30
     steps:
     - uses: actions/checkout@v2
@@ -17,7 +20,7 @@ jobs:
     - name: Select XCode
       uses: maxim-lobanov/setup-xcode@v1.2.1
       with:
-        xcode-version: 12.4
+        xcode-version: ${{ env.xcode-version }}
     - name: Set Release Version
       run: |
         echo ${GITHUB_REF##*/} > RELEASE_TAG
@@ -33,13 +36,13 @@ jobs:
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
           -sdk iphonesimulator \
-          -destination "name=iPhone 11 Pro Max" \
+          -destination "${{ env.destination }}" \
           -configuration Release \
           -derivedDataPath build | xcpretty
     - name: Zip iOS Simulator Build
       run: |
          mkdir Payload
-         cp -R build/Build/Products/Release-iphonesimulator/My\ Demo\ App.app/ Payload/.
+         cp -R build/Build/Products/Release-iphonesimulator/My\ Demo\ App.app Payload
          zip -9 -r SauceLabs-Demo-App.Simulator.zip Payload
          rm -rf Payload
     - uses: yukiarrr/ios-build-action@v1.4.0
