--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,16 @@ jobs:
         certificate-password: ${{ secrets.P12_PASSWORD }}
         mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
         team-id: ${{ secrets.TEAM_ID }}
+    - name: Build XCUITest Artifacts
+      run: |
+        xcodebuild \
+          clean build-for-testing \
+          -workspace "My Demo App.xcworkspace" \
+          -scheme "My Demo App" \
+          -sdk iphoneos \
+          -configuration Debug \
+          -derivedDataPath build
+        ls -lsrt build
     - name: Add Artifacts to Github Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
