--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
           -scheme "My Demo App" \
           -sdk iphoneos \
           -configuration Debug \
-          -derivedDataPath build
+          -derivedDataPath build | xcpretty
         rm -rf Payload
         mkdir Payload
         cp -R build/Build/Products/Debug-iphoneos/My\ Demo\ App.app Payload
