--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,3 +31,24 @@ jobs:
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
           -destination "${{ matrix.destination }}" | xcpretty
+
+  run-tests-on-saucelabs:
+    runs-on: macos-latest
+    timeout-minutes: 30
+    steps:
+      - name: Build for testing
+        run:  |
+          set -o pipefail && \
+          xcodebuild \
+            build-for-testing \
+            -workspace "My Demo App.xcworkspace" \
+            -scheme "My Demo App" \
+            -sdk iphoneos \
+            -destination "generic/platform=ios" \
+            -configuration Release \
+            -derivedDataPath build | xcpretty
+      - name: Test against Sauce Labs
+        uses: saucelabs/saucectl-run-action@v1
+        with:
+          sauce-username: ${{ secrets.SAUCE_USERNAME }}
+          sauce-access-key: ${{ secrets.SAUCE_ACCESS_KEY }}
