--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,6 +36,9 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 30
     steps:
+      - uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: gem install xcpretty
       - name: Build for testing
         run:  |
           set -o pipefail && \
