--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,7 @@ jobs:
         run:  |
           set -o pipefail && \
           xcodebuild \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
             build-for-testing \
             -workspace "My Demo App.xcworkspace" \
             -scheme "My Demo App" \
