--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,10 +10,10 @@ jobs:
     strategy:
       matrix:
         include:
-        # Available XCodes taken from https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11.0-Readme.md
+        # Available XCodes taken from https://github.com/actions/virtual-environments/blob/main/images/macos/macos-11-Readme.md
         - xcode-version: 12.4
           destination: "name=iPhone 11 Pro Max"
-        - xcode-version: 12.5.0
+        - xcode-version: 12.5
           destination: "name=iPhone 11 Pro Max"
     timeout-minutes: 30
     steps:
