--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,11 +69,11 @@ jobs:
           -derivedDataPath build | xcpretty
         rm -rf Payload
         mkdir Payload
-        cp -R build/Build/Products/Debug-iphoneos/MyDemoApp.app Payload
+        cp -R build/Build/Products/Debug-iphoneos/My\ Demo\ App.app Payload
         zip -9 -r SauceLabs-Demo-App.XCUITest.ipa Payload
         rm -rf Payload
         mkdir Payload
-        cp -R build/Build/Products/Debug-iphoneos/My\ Demo\ AppUITests-Runner.app Payload
+        cp -R build/Build/Products/Debug-iphoneos/MyDemoAppUITests-Runner.app Payload
         zip -9 -r SauceLabs-Demo-App-Runner.XCUITest.ipa Payload
         rm -rf Payload
     - name: Add Artifacts to Github Release
