--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         certificate-password: ${{ secrets.P12_PASSWORD }}
         mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
         team-id: ${{ secrets.TEAM_ID }}
-    - name: Build XCUITest Artifacts
+    - name: Build XCUITest Real Device Artifacts
       run: |
         xcodebuild \
           CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
@@ -76,7 +76,27 @@ jobs:
         cp -R build/Build/Products/Debug-iphoneos/MyDemoAppUITests-Runner.app Payload
         zip -9 -r SauceLabs-Demo-App-Runner.XCUITest.ipa Payload
         rm -rf Payload
-        cp -R build/Build/Products/*.xctestrun MyDemoApp.xctestrun
+    - name: Build XCUITest Simulator Artifacts
+      run: |
+        xcodebuild \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+          ONLY_ACTIVE_ARCH=NO \
+          ARCHS_STANDARD="i386 x86_64" \
+          clean build-for-testing \
+          -workspace "My Demo App.xcworkspace" \
+          -scheme "My Demo App" \
+          -sdk iphonesimulator \
+          -destination "${{ env.destination }}" \
+          -derivedDataPath build | xcpretty
+    - name: Zip XCUITest Simulator Artifacts
+      run: |
+          cp -R build/Build/Products/Debug-iphoneos/My\ Demo\ App.app My\ Demo\ App.app
+          zip -9 -r SauceLabs-Demo-App.Simulator.XCUITest.zip MyDemoAppUITests-Runner.app
+          rm -rf MyDemoAppUITests-Runner.app
+          cp -R build/Build/Products/Debug-iphoneos/MyDemoAppUITests-Runner.app MyDemoAppUITests-Runner.app
+          zip -9 -r SauceLabs-Demo-App-Runner.Simulator.XCUITest.zip MyDemoAppUITests-Runner.app
+          rm -rf MyDemoAppUITests-Runner.app
+          cp -R build/Build/Products/*.xctestrun SauceLabs-Demo-App.Simulator.XCUITest.xctestrun
     - name: Disable TestFairy
       run: /usr/libexec/PlistBuddy -c "SET testfairyEnabled NO" "./My Demo App/Info.plist"
     - uses: yukiarrr/ios-build-action@v1.5.0
@@ -101,7 +121,9 @@ jobs:
           SauceLabs-Demo-App-With-TestFairy.ipa
           SauceLabs-Demo-App.XCUITest.ipa
           SauceLabs-Demo-App-Runner.XCUITest.ipa
-          MyDemoApp.xctestrun
+          SauceLabs-Demo-App.Simulator.XCUITest.zip
+          SauceLabs-Demo-App.Simulator.XCUITest.zip
+          SauceLabs-Demo-App.Simulator.XCUITest.xctestrun
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
