test: add failed tests
- add new failed tests
- exclude them for testing release/build

--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -16,6 +16,9 @@ xcuitest:
 
 suites:
   - name: "saucy xcuitest"
+    testOptions:
+      notClass:
+        - MyDemoAppUITests.FailedTests
     devices:
       - name: "iPhone.*"
         # platformVersion: "14.6"
