--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
           test \
           -workspace "My Demo App.xcworkspace" \
           -scheme "My Demo App" \
-          -skip-testing MyDemoAppUITests/FailedTests
+          -skip-testing MyDemoAppUITests/FailedTests \
           -destination "${{ matrix.destination }}" | xcpretty
 
   run-tests-on-saucelabs:
