--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,10 +8,10 @@ on:
 
 jobs:
   create-release:
-    runs-on: macos-11
+    runs-on: macos-14
     env:
-      xcode-version: 12.5
-      destination: name=iPhone 11 Pro Max
+      xcode-version: 15.4
+      destination: name=iPhone 15 Pro Max
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
@@ -31,7 +31,7 @@ jobs:
           set -o pipefail && \
           xcodebuild \
             ONLY_ACTIVE_ARCH=NO \
-            ARCHS_STANDARD="i386 x86_64" \
+            ARCHS_STANDARD="x86_64 arm64" \
             build \
             -workspace "My Demo App.xcworkspace" \
             -scheme "My Demo App" \
@@ -81,7 +81,7 @@ jobs:
           xcodebuild \
             CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
             ONLY_ACTIVE_ARCH=NO \
-            ARCHS_STANDARD="i386 x86_64" \
+            ARCHS_STANDARD="x86_64 arm64" \
             clean build-for-testing \
             -workspace "My Demo App.xcworkspace" \
             -scheme "My Demo App" \
