--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,12 +35,16 @@ jobs:
           -destination "${{ matrix.destination }}" | xcpretty
 
   run-tests-on-saucelabs:
-    runs-on: macos-latest
+    runs-on: macos-14
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
         run: gem install xcpretty
+      - name: Select XCode
+        uses: maxim-lobanov/setup-xcode@v1.2.1
+        with:
+          xcode-version: 15.4
       - name: Build for testing
         run:  |
           set -o pipefail && \
@@ -49,7 +53,6 @@ jobs:
             build-for-testing \
             -workspace "My Demo App.xcworkspace" \
             -scheme "My Demo App" \
-            -sdk iphoneos \
             -destination "generic/platform=ios" \
             -configuration Release \
             -derivedDataPath build | xcpretty
