--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Create Release for My Demo App
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -14,11 +17,11 @@ jobs:
       destination: name=iPhone 15 Pro Max
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Install Dependencies
         run: gem install xcpretty
       - name: Select XCode
-        uses: maxim-lobanov/setup-xcode@v1.2.1
+        uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: ${{ env.xcode-version }}
       - name: Set Release Version
@@ -45,7 +48,7 @@ jobs:
           cp -R build/Build/Products/Release-iphonesimulator/My\ Demo\ App.app Payload
           zip -9 -r SauceLabs-Demo-App.Simulator.zip Payload
           rm -rf Payload
-      - uses: yukiarrr/ios-build-action@v1.5.0
+      - uses: yukiarrr/ios-build-action@v1.12.0
         with:
           workspace-path: My Demo App.xcworkspace
           project-path: My Demo App.xcodeproj
@@ -100,7 +103,7 @@ jobs:
           cp -R build/Build/Products/*.xctestrun SauceLabs-Demo-App.Simulator.XCUITest.xctestrun
       - name: Disable TestFairy
         run: /usr/libexec/PlistBuddy -c "SET testfairyEnabled NO" "./My Demo App/Info.plist"
-      - uses: yukiarrr/ios-build-action@v1.5.0
+      - uses: yukiarrr/ios-build-action@v1.12.0
         with:
           workspace-path: My Demo App.xcworkspace
           project-path: My Demo App.xcodeproj
@@ -113,7 +116,7 @@ jobs:
           mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
           team-id: ${{ secrets.TEAM_ID }}
       - name: Add Artifacts to Github Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
